zip file update

--- a/dsc650/assignments/Package Assignments.ipynb
+++ b/dsc650/assignments/Package Assignments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,8 @@
     "import zipfile\n",
     "import shutil\n",
     "\n",
-    "first_name = 'John' # Put your first name here\n",
-    "last_name = 'Doe' # Put your last name here\n",
+    "first_name = 'Yograj' # Put your first name here\n",
+    "last_name = 'Karki' # Put your last name here\n",
     "\n",
     "first_name = first_name.replace(' ', '-') # Replace spaces with -\n",
     "last_name = last_name.replace(' ', '-') # Replace spaces with -\n",
